docs-archive/apache-airflow-providers-google/9.0.0/_sources/_api/tests/system/providers/google/cloud/vertex_ai/example_vertex_ai_custom_container/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container`
==========================================================================================

.. py:module:: tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container

.. autoapi-nested-parse::

   Example Airflow DAG for Google Vertex AI service testing Custom Jobs operations.



Module Contents
---------------

.. py:data:: ENV_ID

   

.. py:data:: PROJECT_ID

   

.. py:data:: DAG_ID
   :value: 'vertex_ai_custom_job_operations'

   

.. py:data:: REGION
   :value: 'us-central1'

   

.. py:data:: CONTAINER_DISPLAY_NAME

   

.. py:data:: MODEL_DISPLAY_NAME

   

.. py:data:: CUSTOM_CONTAINER_GCS_BUCKET_NAME

   

.. py:data:: DATA_SAMPLE_GCS_OBJECT_NAME
   :value: 'vertex-ai/california_housing_train.csv'

   

.. py:data:: CSV_FILE_LOCAL_PATH
   :value: '/custom-job/california_housing_train.csv'

   

.. py:data:: RESOURCES_PATH

   

.. py:data:: CSV_ZIP_FILE_LOCAL_PATH

   

.. py:data:: TABULAR_DATASET

   

.. py:data:: CONTAINER_URI
   :value: 'gcr.io/cloud-aiplatform/training/tf-cpu.2-2:latest'

   

.. py:data:: CUSTOM_CONTAINER_URI

   

.. py:data:: MODEL_SERVING_CONTAINER_URI
   :value: 'gcr.io/cloud-aiplatform/prediction/tf2-cpu.2-2:latest'

   

.. py:data:: REPLICA_COUNT
   :value: 1

   

.. py:data:: MACHINE_TYPE
   :value: 'n1-standard-4'

   

.. py:data:: ACCELERATOR_TYPE
   :value: 'ACCELERATOR_TYPE_UNSPECIFIED'

   

.. py:data:: ACCELERATOR_COUNT
   :value: 0

   

.. py:data:: TRAINING_FRACTION_SPLIT
   :value: 0.7

   

.. py:data:: TEST_FRACTION_SPLIT
   :value: 0.15

   

.. py:data:: VALIDATION_FRACTION_SPLIT
   :value: 0.15

   

.. py:data:: create_bucket

   

.. py:data:: test_run

   

