docs-archive/apache-airflow-providers-google/10.22.0/_sources/_api/tests/system/providers/google/cloud/vertex_ai/example_vertex_ai_custom_container/index.rst.txt
:py:mod:`tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container`
==========================================================================================

.. py:module:: tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container

.. autoapi-nested-parse::

   Example Airflow DAG for Google Vertex AI service testing Custom Jobs operations.



Module Contents
---------------


Functions
~~~~~~~~~

.. autoapisummary::

   tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container.TABULAR_DATASET



Attributes
~~~~~~~~~~

.. autoapisummary::

   tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container.ENV_ID
   tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container.PROJECT_ID
   tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container.DAG_ID
   tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container.REGION
   tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container.CONTAINER_DISPLAY_NAME
   tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container.MODEL_DISPLAY_NAME
   tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container.RESOURCE_DATA_BUCKET
   tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container.CUSTOM_CONTAINER_GCS_BUCKET_NAME
   tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container.DATA_SAMPLE_GCS_OBJECT_NAME
   tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container.CONTAINER_URI
   tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container.CUSTOM_CONTAINER_URI
   tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container.MODEL_SERVING_CONTAINER_URI
   tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container.REPLICA_COUNT
   tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container.MACHINE_TYPE
   tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container.ACCELERATOR_TYPE
   tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container.ACCELERATOR_COUNT
   tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container.TRAINING_FRACTION_SPLIT
   tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container.TEST_FRACTION_SPLIT
   tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container.VALIDATION_FRACTION_SPLIT
   tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container.create_bucket
   tests.system.providers.google.cloud.vertex_ai.example_vertex_ai_custom_container.test_run


.. py:data:: ENV_ID

   

.. py:data:: PROJECT_ID

   

.. py:data:: DAG_ID
   :value: 'vertex_ai_custom_job_operations'

   

.. py:data:: REGION
   :value: 'us-central1'

   

.. py:data:: CONTAINER_DISPLAY_NAME

   

.. py:data:: MODEL_DISPLAY_NAME

   

.. py:data:: RESOURCE_DATA_BUCKET
   :value: 'airflow-system-tests-resources'

   

.. py:data:: CUSTOM_CONTAINER_GCS_BUCKET_NAME

   

.. py:data:: DATA_SAMPLE_GCS_OBJECT_NAME
   :value: 'vertex-ai/california_housing_train.csv'

   

.. py:function:: TABULAR_DATASET(bucket_name)


.. py:data:: CONTAINER_URI
   :value: 'gcr.io/cloud-aiplatform/training/tf-cpu.2-2:latest'

   

.. py:data:: CUSTOM_CONTAINER_URI

   

.. py:data:: MODEL_SERVING_CONTAINER_URI
   :value: 'gcr.io/cloud-aiplatform/prediction/tf2-cpu.2-2:latest'

   

.. py:data:: REPLICA_COUNT
   :value: 1

   

.. py:data:: MACHINE_TYPE
   :value: 'n1-standard-4'

   

.. py:data:: ACCELERATOR_TYPE
   :value: 'ACCELERATOR_TYPE_UNSPECIFIED'

   

.. py:data:: ACCELERATOR_COUNT
   :value: 0

   

.. py:data:: TRAINING_FRACTION_SPLIT
   :value: 0.7

   

.. py:data:: TEST_FRACTION_SPLIT
   :value: 0.15

   

.. py:data:: VALIDATION_FRACTION_SPLIT
   :value: 0.15

   

.. py:data:: create_bucket

   

.. py:data:: test_run

   

